Refactor configuration handling and update JSON structure
- Introduced EnvironmentConfig class to encapsulate environment-specific settings.
- Updated ConfigService to use the new structure for loading configuration data.
- Modified configuration.json to reflect the new format with connection and initiators.
- Adjusted methods in ConfigService to retrieve address, port, and passwords from the new structure.
- Updated StartSessionRequest to use a record for cleaner code.
- Enhanced logging and error handling in DynamicSettingsBuilder and TestAcceptorService.
- Added .gitignore entries for store and log files.